# ogs

./: .gitmodules  CMakeLists.txt  Jenkinsfile  generate_trace_input.sh  script.py  secondary_vars_output.py  tracefunc.c
Applications/ApplicationsLib/: ProjectData.cpp
MaterialLib/: CMakeLists.txt
MaterialLib/FractureModels/: CohesiveZoneModeI.cpp  CohesiveZoneModeI.h  CreateMohrCoulomb.cpp  MohrCoulomb.cpp
MaterialLib/SolidModels/: CreateConstitutiveRelation.cpp  CreateEhlers.h  CreateEhlersDamage.h  CreateGeosed.h  CreateThermoPlasticBDT.h  CreateWeibull.h  DamageBase.h  Ehlers-impl.h  Ehlers.h  EhlersDamage-impl.h  EhlersDamage.cpp  EhlersDamage.h  Geosed-impl.h  Geosed.cpp  Geosed.h  KelvinVector-impl.h  LinearElasticIsotropic.h  Lubby2-impl.h  Lubby2.h  MechanicsBase.h  (+8 more)
MathLib/: KelvinVector-impl.h
MeshLib/: ElementAlgorithms.cpp  ElementAlgorithms.h  Mesh.h  findElementsWithinRadius.h
NumLib/: NewtonRaphson.h
ProcessLib/: CMakeLists.txt  IntegrationPointSerialization.h  LocalAssemblerInterface.h  Output.cpp  Process.cpp  Process.h  ProcessOutput.cpp  ProcessOutput.h  VectorMatrixAssembler.cpp  VectorMatrixAssembler.h
ProcessLib/BoundaryCondition/: BoundaryCondition.cpp  BoundaryCondition.h  NonuniformDirichletBoundaryCondition.cpp  NonuniformDirichletBoundaryCondition.h  NonuniformNeumannBoundaryCondition.cpp  NonuniformNeumannBoundaryConditionLocalAssembler.h  PressureBoundaryCondition-impl.h
ProcessLib/Deformation/: BMatrixPolicy.h  LinearBMatrix.h
ProcessLib/HydroMechanics/: HydroMechanicsFEM.h
ProcessLib/LIE/HydroMechanics/LocalAssembler/: HydroMechanicsLocalAssemblerMatrix-impl.h  IntegrationPointDataFracture.h
ProcessLib/LIE/SmallDeformation/LocalAssembler/: SmallDeformationLocalAssemblerMatrix-impl.h  SmallDeformationLocalAssemblerMatrixNearFracture-impl.h
ProcessLib/Output/: IntegrationPointWriter.cpp
ProcessLib/SmallDeformation/: CMakeLists.txt  CreateSmallDeformationProcess.cpp  LocalAssemblerInterface.h  LocalDataInitializer.h  SmallDeformationFEM.h  SmallDeformationProcess-impl.h  SmallDeformationProcess.cpp  SmallDeformationProcess.h  Tests.cmake
ProcessLib/SmallDeformationCommon/: Common.h  integration_point.proto  integration_point_data.h
ProcessLib/SmallDeformationNonlocal/: CreateLocalAssemblers.h  CreateSmallDeformationNonlocalProcess.cpp  CreateSmallDeformationNonlocalProcess.h  Damage.h  IntegrationPointData.h  IntegrationPointDataNonlocalInterface.h  LocalAssemblerInterface.h  LocalDataInitializer.h  SmallDeformationNonlocalFEM.h  SmallDeformationNonlocalProcess-fwd.h  SmallDeformationNonlocalProcess.cpp  SmallDeformationNonlocalProcess.h  SmallDeformationNonlocalProcessData.h  Tests.cmake
ProcessLib/SmallDeformationNonlocalHydroMechanics/: CMakeLists.txt  CreateLocalAssemblers.h  CreateSmallDeformationNonlocalHydroMechanicsProcess.cpp  CreateSmallDeformationNonlocalHydroMechanicsProcess.h  IntegrationPointData.h  IntegrationPointDataNonlocalInterface.h  LocalAssemblerInterface.h  LocalDataInitializer.h  SmallDeformationNonlocalHydroMechanicsFEM.h  SmallDeformationNonlocalHydroMechanicsProcess.cpp  SmallDeformationNonlocalHydroMechanicsProcess.h  SmallDeformationNonlocalHydroMechanicsProcessData.h  Tests.cmake
ProcessLib/ThermoMechanics/: CreateThermoMechanicsProcess.cpp  LocalAssemblerInterface.h  Tests.cmake  ThermoMechanicsFEM.h  ThermoMechanicsProcess.cpp  ThermoMechanicsProcess.h
ProcessLib/Utils/: RegisterInternalVariables.h
SerializationLib/: CMakeLists.txt  common.proto  integration_point.proto  material.proto
(+188 files in other folders)
